# business-card-scanner

./: .env.example  .gitignore  Dockerfile  README.md  VCardScanner.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/endpoints/: ingest.py
app/core/: config.py
app/models/: contact.py
app/services/: image_converter.py  image_processor.py  markdown_service.py  ocr_service.py  vcard_service.py
grafana/provisioning/datasources/: datasource.yml
nginx/conf.d/: default.conf
prometheus/: prometheus.yml
